# v-queue

./: Cargo.toml  README.md
java/: build.sh
java/example-vqueue/: Makefile  pom.xml
java/example-vqueue/src/main/java/vqueue/example/: App.java
java/libjvqueue/: Cargo.toml
java/libjvqueue/src/: lib.rs
java/vqueue-binding/: pom.xml
java/vqueue-binding/src/main/java/org/sm/vqueue/: VQueue.java
src/: consumer.rs  lib.rs  queue.rs  record.rs  test.rs
