[package]
name = "v_queue"
version = "0.2.2"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2021"
license = "MIT"
description = "simple file based queue"
readme = "README.md"
repository = "https://github.com/semantic-machines/v-queue"

[lib]
path = "src/lib.rs"

[dependencies]
fs2 = "0.4.3"
scan_fmt = "0.2.6"
crc32fast = "1.2.1"
log = "0.4"
