[package]
name = "v_queue"
version = "0.2.7"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2021"
license = "MIT"
description = "simple file based queue"
readme = "README.md"
repository = "https://github.com/semantic-machines/v-queue"

[lib]
path = "src/lib.rs"

[dependencies]
fs2 = "0.4"
scan_fmt = "0.2"
crc32fast = "1.3"
log = "0.4"
uuid = { version = "1.8", features = ["v4"] }
